# flake8-typing-collections

./: README.md  setup.cfg
.github/workflows/: python-black.yml
flake8_typing_collections/: ast_import_decode.py  checker.py
tests/: test_ast_import_decode.py  test_flags.py  test_nested_types.py  test_tyco100.py  test_tyco101.py  test_tyco102.py  test_tyco103.py  test_tyco104.py  test_tyco105.py  test_tyco106.py  test_tyco107.py  test_tyco108.py  test_tyco109.py  test_tyco110.py  test_tyco111.py  test_tyco112.py  test_tyco113.py  test_tyco114.py  test_tyco115.py  test_tyco116.py  test_tyco117.py  test_tyco118.py  test_tyco119.py  test_tyco120.py  test_tyco121.py  test_tyco122.py  test_tyco123.py  test_tyco124.py  test_tyco125.py  test_tyco126.py  test_tyco127.py  test_tyco128.py  test_tyco129.py  test_tyco130.py  test_tyco131.py  test_tyco132.py  test_tyco200.py  test_tyco201.py  test_tyco202.py  util.py
