[metadata]
name = flake8-typing-collections
version = 2.0
description = A flake8 plugin that checks the use of type alternatives from the typing module over actual run time types, especially from the collections module.
long_description = file: README.md
long_description_content_type = text/markdown
author = Andreas Tollkötter
url = https://github.com/atollk/flake8-typing-collections
license = MIT
license_file = LICENSE
keywords = flake8, typing, type-annotations
classifiers =
    Framework :: Flake8
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages =
    flake8_typing_collections
include_package_data = True
python_requires = >=3.8
zip_safe = False

[options.entry_points]
flake8.extension =
    TYC = flake8_typing_collections.checker:Checker

